--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
       </div>
 
       <div class="about">
-        <p>fuck this shit fuck this shit fuck this shit fuck this shit fuck this shit fuck this shit fuck this shit fuck this shit
-        fuck this shit fuck this shit fuck this shit fuck this shit fuck this shit fuck this shit fuck this shit fuck this shit
-      fuck this shit fuck this shit fuck this shit fuck this shit fuck this shit fuck this shit fuck this shit fuck this shit </p>
+        <p>take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe 
+        take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe 
+        take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe </p>
       </div>
 
     </div>
