--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="about">
         <p>take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe 
         take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe 
-        take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe take a breathe </p>
+        take a breathe take a breathe </p>
       </div>
 
     </div>
